// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`key facts with title 1`] = `
<style>
@media (min-width:768px) {
  .mq0 {
    padding-right: 20px;
    width: 20%;
  }
}

@media (min-width:768px) {
  .mq1 {
    width: 80%;
  }
}

@media (min-width:768px) {
  .mq2 {
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
    margin-bottom: 10px;
    margin-left: auto;
    margin-right: auto;
    margin-top: 10px;
    width: 80.8%;
    -webkit-box-orient: horizontal;
    -webkit-box-direction: normal;
  }
}

@media (min-width:1024px) {
  .mq2 {
    width: 56.2%;
  }
}
</style>
<div
  className="mq2"
>
  <div
    className="mq0"
  >
    EXAMPLE TITLE
  </div>
  <div
    className="mq1"
  >
    <div>
      <div />
      <div>
        Example bullet text
      </div>
    </div>
    <div>
      <div />
      <div>
        An example 
        <a>
          link
        </a>
      </div>
    </div>
    <div>
      <div />
      <div>
        More example text.
      </div>
    </div>
    <div>
      <div />
      <div>
        Example text 
        <b>
          this is bold 
        </b>
        <i>
          this is in italics.
        </i>
      </div>
    </div>
  </div>
</div>
`;

exports[`key facts with title and context theme 1`] = `
<div>
  <div>
    EXAMPLE TITLE
  </div>
  <div>
    <div>
      <div />
      <div>
        Example bullet text
      </div>
    </div>
    <div>
      <div />
      <div>
        An example 
        <a>
          link
        </a>
      </div>
    </div>
    <div>
      <div />
      <div>
        More example text.
      </div>
    </div>
    <div>
      <div />
      <div>
        Example text 
        <b>
          this is bold 
        </b>
        <i>
          this is in italics.
        </i>
      </div>
    </div>
  </div>
</div>
`;
